--- a/JenkinsSentinel/MainWindow.xaml
+++ b/JenkinsSentinel/MainWindow.xaml
@@ -9,10 +9,10 @@
 
     <DockPanel LastChildFill="True"  Background="#2C136DBA" >
         <Menu DockPanel.Dock="Top" Height="Auto">
-            <MenuItem Header="Jobs" HorizontalAlignment="Center">
+            <MenuItem Name="menu_jobs" Header="Jobs" HorizontalAlignment="Center" IsEnabled="False">
                 <MenuItem  Name="menu_add_new_job" Header="Add new Job" Click="menu_add_new_job_Click"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Templates" HorizontalAlignment="Center">
+            <MenuItem Name="menu_templates" Header="Templates" HorizontalAlignment="Center" IsEnabled="False">
                 <MenuItem  Name="menu_jumpstart" Header="Jumpstart" Click="menu_jumpstart_Click"></MenuItem>
                 <MenuItem  Name="menu_buildbot" Header="Buildbot" Click="menu_buildbot_Click"></MenuItem>
                 <MenuItem  Name="menu_itenv" Header="IT Environment" Click="menu_itenv_Click"></MenuItem>
