--- a/JenkinsSentinel/TokenInfo.xaml
+++ b/JenkinsSentinel/TokenInfo.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="How to get Jenkins token"  Height="300" Width="600" Icon="img/sentineljenkins.png" >
-    <Grid>
+    <Grid Background="#2C136DBA">
         <TextBlock Margin="8" FontSize="16" TextWrapping="Wrap">
             1. Log in to Jenkins <LineBreak/>
             2. Click you name (upper-right corner). <LineBreak/>
