--- a/JenkinsSentinel/MainWindow.xaml
+++ b/JenkinsSentinel/MainWindow.xaml
@@ -18,6 +18,9 @@
                 <MenuItem  Name="menu_itenv" Header="IT Environment" Click="menu_itenv_Click"></MenuItem>
                 <MenuItem  Name="menu_e2e_env" Header="E2E Test Environment" Click="menu_e2e_env_Click"></MenuItem>
             </MenuItem>
+            <MenuItem Header="Settings" HorizontalAlignment="Center">
+                <MenuItem  Name="menu_sentinel_settings" Header="Sentinel Settings" Click="menu_sentinel_settings_Click"></MenuItem>
+            </MenuItem>
             <MenuItem Header="Info" HorizontalAlignment="Center">
                 <MenuItem  Name="menu_get_token" Header="How to get Jenkins token" Click="menu_get_token_Click"></MenuItem>
                 <MenuItem  Name="menu_product_info" Header="Product information" Click="menu_product_info_Click"></MenuItem>
