--- a/JenkinsSentinel/TokenInfo.xaml
+++ b/JenkinsSentinel/TokenInfo.xaml
@@ -5,7 +5,7 @@
     <Grid Background="#2C136DBA">
         <TextBlock Margin="8" FontSize="16" TextWrapping="Wrap">
             1. Log in to Jenkins <LineBreak/>
-            2. Click you name (upper-right corner). <LineBreak/>
+            2. Click your name (upper-right corner). <LineBreak/>
             3. Click Configure (left-side menu). <LineBreak/>
             4. Use "Add new Token" button to generate a new one then name it. <LineBreak/>
             5. You must copy the token when you generate it as you cannot view the token afterwards. <LineBreak/>
